
<resources>
    <string name="app_name">WeatherApp</string>
    <string name="drawer_title_main">Main</string>
    <string name="drawer_title_settings">Settings</string>
    <string name="tab_title_main">Main</string>
    <string name="tab_title_more">More</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="toast_settings_selected">Settings selected</string>
    <string name="celsius_symbol">&#176;C</string>
    <string name="button_title_more">More</string>
    <string name="button_title_aqi">AQI %d</string>
    <string name="content_description_daily_forecast">Weather forecast</string>
    <string name="content_description_hourly_forecast">Weather forecast</string>
    <string name="current_weather">Current weather</string>
    <string name="rv_daily_forecast_item_degrees_day">%d&#176;</string>
    <string name="rv_daily_forecast_item_degrees_night">%d&#176;</string>
    <string name="rv_hourly_forecast_item_degrees">%d&#176;</string>
    <string name="middle_dot">&#183;</string>
    <string name="slash">&#47;</string>
    <string name="content_description_wind_direction">Wind direction</string>
    <string name="rv_hourly_forecast_item_wind_speed">%.1f km/h</string>
    <string name="title_real_feel">Real feel</string>
    <string name="fragment_more_real_feel_value">%.1f°C</string>
    <string name="fragment_more_chance_of_rain_value">%d%%</string>
    <string name="title_chance_of_rain">Chance of rain</string>
    <string name="title_wind_speed">Wind speed</string>
    <string name="fragment_more_value_wind_speed">%.1f km/h</string>
    <string name="title_humidity">Humidity</string>
    <string name="fragment_more_value_humidity">%d%%</string>
    <string name="title_pressure">Pressure</string>
    <string name="fragment_more_value_pressure">%.2f hPa</string>
    <string name="title_uv_index">UV index</string>
    <string name="title_aid_quality_index">Aid Quality Index</string>
    <string name="rationale_message">Allow positioning by GPS to locate your city</string>
    <string name="button_title_allow">Allow</string>
    <string name="button_title_cancel">Cancel</string>
    <string name="alert_message_enable_gps">Please enable GPS</string>
    <string name="button_title_close">Close</string>
    <string name="day_today">Today</string>
    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="weather_sunny">Sunny</string>
    <string name="weather_cloudy">Cloudy</string>
    <string name="weather_rain">Rain</string>
    <string name="time_now">Now</string>
    <string name="time_12_00">12:00</string>
    <string name="time_13_00">13:00</string>
    <string name="time_14_00">14:00</string>
    <string name="time_15_00">15:00</string>
    <string name="time_16_00">16:00</string>
    <string name="wind_direction_se">SE</string>
    <string name="wind_direction_s">S</string>
</resources>